src/components/list/list.scss
@import '../../style/internal/mdc-variables';

@import '@limetech/mdc-list/mdc-list';
@import '@limetech/mdc-menu/mdc-menu';

@import '../checkbox/checkbox.scss';

@import './radio-button/radio-button.scss';

@import '../../style/mixins';

/**
 * @prop --icon-background-color: Color to use for icon background when `badgeIcons=true`.
 * @prop --icon-color: Color to use for icon. Defaults to grey when `badgeIcons=false`. Defaults to white when `badgeIcons=true`.
 */

:host {
    display: block;
}

:host([hidden]) {
    display: none;
}

:host(.has-striped-rows) {
    .mdc-list {
        border: 1px solid #f6f6f7;
    }

    .mdc-list-item {
        &:nth-child(even) {
            background-color: rgba(#fafafb, 1);
        }
        &:nth-child(odd) {
            background-color: rgba(#fafafb, 0.5);
        }
    }
}

:host(.has-interactive-items) {
    .mdc-list-item {
        &:not(.mdc-list-item--disabled) {
            @include is-flat-clickable();
            &:hover {
                z-index: 1;
                background-color: #fff;

                &:before {
                    background-color: #fff;
                }
            }
        }
    }
}

.mdc-menu {
    max-height: 80vh; // force tall menus render inside the viewport when menu is at the bottom of the screen
}

.mdc-list {
    --mdc-theme-text-icon-on-background: var(--icon-color, rgb(157, 157, 157));
    padding: 0;
    border-radius: pxToRem(6);

    .mdc-list-item {
        &:first-child {
            border-radius: pxToRem(6) pxToRem(6) pxToRem(0) pxToRem(0);
        }
        &:last-child {
            border-radius: pxToRem(0) pxToRem(0) pxToRem(6) pxToRem(6);
        }
    }

    &.selectable .mdc-list-item:not(.mdc-list-item--disabled) {
        cursor: pointer;
    }

    &.mdc-list--avatar-list {
        position: relative;

        limel-icon {
            background-color: var(
                --icon-background-color,
                var(--lime-light-grey)
            );
            color: var(--icon-color, white);
        }

        hr.mdc-list-divider {
            position: absolute;
            bottom: 0;

            &.mdc-list-divider--inset {
                --icon-width: #{pxToRem(41)};
                --icon-right-padding: #{pxToRem(16)};
                --list-right-padding: #{pxToRem(16)};
                margin-left: calc(
                    var(--icon-width) + var(--icon-right-padding)
                );
                width: calc(
                    100% - var(--icon-width) - var(--icon-right-padding) -
                        var(--list-right-padding)
                );

                &.x-small {
                    --icon-width: #{pxToRem(23)};
                }

                &.small {
                    --icon-width: #{pxToRem(30)};
                }

                &.medium {
                    --icon-width: #{pxToRem(40)};
                }

                &.large {
                    --icon-width: #{pxToRem(46)};
                }
            }
        }

        .mdc-list-item:last-child hr.mdc-list-divider {
            display: none;
        }
    }

    .mdc-list-item[role='menuitem'] {
        font-size: pxToRem(13);

        .mdc-list-item__graphic {
            margin-right: pxToRem(14);
        }
    }

    &.mdc-list--two-line {
        .mdc-list-item__primary-text {
            margin-top: pxToRem(-12);
        }
        .mdc-list-item__text {
            align-self: center;
        }
        &.list--compact {
            .mdc-list-item {
                height: 4rem;

                .mdc-list-item__text {
                    margin-top: pxToRem(-4);
                }
            }
        }
    }

    // Tweaks to display the icon correctly in Edge
    limel-icon.mdc-list-item__graphic {
        display: block;
    }
}

.mdc-list:not(.mdc-list--avatar-list) {
    limel-icon.mdc-list-item__graphic {
        // Tweaks to make icon lists align nicely with badge-icon lists.
        &[size='x-small'] {
            margin-right: pxToRem(24);
        }
        &[size='small'] {
            margin-right: pxToRem(26);
        }
    }
}

